--- a/src/ian_cms/templates/base.html
+++ b/src/ian_cms/templates/base.html
@@ -79,35 +79,6 @@
      
     </style>
 
-    <!-- Start of Async Drift Code -->
-      <script>
-        "use strict";
-        
-        !function() {
-          var t = window.driftt = window.drift = window.driftt || [];
-          if (!t.init) {
-            if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-            t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-            t.factory = function(e) {
-              return function() {
-                var n = Array.prototype.slice.call(arguments);
-                return n.unshift(e), t.push(n), t;
-              };
-            }, t.methods.forEach(function(e) {
-              t[e] = t.factory(e);
-            }), t.load = function(t) {
-              var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-              o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-              var i = document.getElementsByTagName("script")[0];
-              i.parentNode.insertBefore(o, i);
-            };
-          }
-        }();
-        drift.SNIPPET_VERSION = '0.3.1';
-        drift.load('xzm77hcka2z7');
-      </script>
-    <!-- End of Async Drift Code -->
-    
 </head>
 
 {% include "navbar.html" %}
@@ -134,188 +105,14 @@
       {% block extra_body %}
       {% endblock %}
 
-      
-      {% block CTA %}
-      {% include "CTA.html" %} 
-      {% endblock %}
         
-      {% block footer %}
+      <!-- {% block footer %}
       {% include "footer.html" %} 
       {% endblock footer %}     
-     
+      -->
 
  
    
   </body>
-
-<script src='https://js.braintreegateway.com/web/3.82.0/js/hosted-fields.min.js'></script>
-<script src='https://js.braintreegateway.com/web/3.82.0/js/client.min.js'></script>
-<script>
-    var form = document.querySelector('#cardForm');
-    braintree.client.create({
-        authorization: '{{client_token}}'
-    }, function (err, clientInstance) {
-        if (clientInstance) {
-            console.log(clientInstance);
-        }
-        if (err) {
-            console.error(err);
-            return;
-        }
-
-        braintree.hostedFields.create({
-            client: clientInstance,
-            styles: {
-                input: {
-                    // change input styles to match
-                    // bootstrap styles
-                    'font-size': '1rem',
-                    color: '#495057'
-                }
-            },
-            fields: {
-                cardholderName: {
-                    selector: '#cc-name',
-                    placeholder: 'Name as it appears on your card'
-                },
-                number: {
-                    selector: '#cc-number',
-                    placeholder: '4111 1111 1111 1111'
-                },
-                cvv: {
-                    selector: '#cc-cvv',
-                    placeholder: '123'
-                },
-                expirationDate: {
-                    selector: '#cc-expiration',
-                    placeholder: 'MM / YY'
-                }
-            }
-        }, function (err, hostedFieldsInstance) {
-            if (err) {
-                console.error(err);
-                return;
-            }
-            function createInputChangeEventListener(element) {
-                return function () {
-                    validateInput(element);
-                }
-            }
-
-            function setValidityClasses(element, validity) {
-                if (validity) {
-                    element.removeClass('is-invalid');
-                    element.addClass('is-valid');
-                } else {
-                    element.addClass('is-invalid');
-                    element.removeClass('is-valid');
-                }
-            }
-
-            function validateInput(element) {
-                // very basic validation, if the
-                // fields are empty, mark them
-                // as invalid, if not, mark them
-                // as valid
-
-                if (!element.val().trim()) {
-                    setValidityClasses(element, false);
-
-                    return false;
-                }
-
-                setValidityClasses(element, true);
-
-                return true;
-            }
-
-            function validateEmail() {
-                var baseValidity = validateInput(email);
-
-                if (!baseValidity) {
-                    return false;
-                }
-
-                if (email.val().indexOf('@') === -1) {
-                    setValidityClasses(email, false);
-                    return false;
-                }
-
-                setValidityClasses(email, true);
-                return true;
-            }
-
-            var ccName = $('#cc-name');
-            var email = $('#email');
-
-            ccName.on('change', function () {
-                validateInput(ccName);
-            });
-            email.on('change', validateEmail);
-
-
-            hostedFieldsInstance.on('validityChange', function (event) {
-                var field = event.fields[event.emittedBy];
-
-                // Remove any previously applied error or warning classes
-                $(field.container).removeClass('is-valid');
-                $(field.container).removeClass('is-invalid');
-
-                if (field.isValid) {
-                    $(field.container).addClass('is-valid');
-                } else if (field.isPotentiallyValid) {
-                    // skip adding classes if the field is
-                    // not valid, but is potentially valid
-                } else {
-                    $(field.container).addClass('is-invalid');
-                }
-            });
-
-            hostedFieldsInstance.on('cardTypeChange', function (event) {
-                var cardBrand = $('#card-brand');
-                var cvvLabel = $('[for="cc-cvv"]');
-
-                if (event.cards.length === 1) {
-                    var card = event.cards[0];
-
-                    // change pay button to specify the type of card
-                    // being used
-                    cardBrand.text(card.niceType);
-                    // update the security code label
-                    cvvLabel.text(card.code.name);
-                } else {
-                    // reset to defaults
-                    cardBrand.text('Card');
-                    cvvLabel.text('CVV');
-                }
-            });
-
-
-   
-            form.addEventListener("submit", function (event) {
-                event.preventDefault();
-
-                // var formIsInvalid = false;
-                var state = hostedFieldsInstance.getState();
-
-      
-                hostedFieldsInstance.tokenize(function (err, payload) {
-                        if (err) {
-                            console.error(err);
-                            return;
-                        }
-                        document.getElementById("nonce").value = payload.nonce;
-                        document.getElementById('cardForm').submit()
-
-                    });
-            }, false);
-  
-        });
-    });
-
-
-
-
-</script>
 
 </html>
