--- a/src/ian_cms/templates/auth/signup.html
+++ b/src/ian_cms/templates/auth/signup.html
@@ -37,7 +37,23 @@ Sign Up
         <legend class="border-bottom mb-4"  style="text-align: center;"><h1>Create your account</h1></legend>
         {% csrf_token %}
         <div class="form-row">
-            {{form|crispy}}
+            <div class="form-group col-md-6">
+                <label for="inputEmail4" class="form-label">Email</label>
+                <input type="email" class="form-control" id="inputEmail4">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputPassword4" class="form-label">Password</label>
+                <input type="password" class="form-control" id="inputPassword4">
+              </div>
+              <div class="form-group col-12">
+                <label for="inputAddress" class="form-label">Address</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+              </div>
+              <div class="form-group col-12">
+                <label for="inputAddress2" class="form-label">Address 2</label>
+                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+              </div>
+            <!-- {{form|crispy}} -->
         </div>
 
         
