Add homepage content

--- a/src/ian_cms/templates/navbar.html
+++ b/src/ian_cms/templates/navbar.html
@@ -25,7 +25,7 @@
        
             <a class="nav-item nav-link" href="#">PTOW</a>
             <a class="nav-item nav-link" href="#">Articles</a>        
-            <a href="/register"><button type="button" class="btn btn-primary">Get Started</button></a>
+            <a href="/register"><button type="button" class="btn btn-primary">Login</button></a>
 
      
           </div>
