--- a/src/ian_cms/templates/base.html
+++ b/src/ian_cms/templates/base.html
@@ -64,7 +64,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
 
         :root {
-            --theme-color:  #066565;
+            --theme-color:  #28A745;
         }
         
         body{
