--- a/src/ian_cms/templates/index.html
+++ b/src/ian_cms/templates/index.html
@@ -3,10 +3,47 @@
 {% block content %}
 {% load static %}
 
+<style>
+    h1{
+        color: var(--theme-color);   
+    }
+</style>
+
 <main>
-    <section>
-        <h1>Hello</h1>
-    </section>
+    <section id="featured-video">
+        <div class="container py-5">
+            <h1 class="text-center pb-3">Featured Video </h1>
+
+            <div class="row pt-3">
+                <div class="col-md-6 m-auto px-3">
+                    <img class="img-fluid" src="{% static 'img/video-placeholder.jpg' %}">      
+                </div>
+                <div class="col-md-6">   
+                    <h2>Summary of video</h2>                
+                    <p class="lead pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga</p>
+                </div>
+            </div>
+        </div>
+     </section>
+     <section id="featured-article">
+        <div class="container py-5">
+            <h1 class="text-center pb-3">Featured Article </h1>
+
+            <div class="row pt-3">
+                <div class="col-md-6 m-auto px-3">
+                    <img class="img-fluid" src="{% static 'img/video-placeholder.jpg' %}">      
+                </div>
+                <div class="col-md-6">   
+                    <h2>Article summary</h2>                
+                    <p class="lead pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga</p>
+                </div>
+            </div>
+        </div>
+     </section>
 </main>
 
 
