Add content to fireside and ptow pages

--- a/src/ian_cms/templates/base.html
+++ b/src/ian_cms/templates/base.html
@@ -61,14 +61,15 @@
 
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap');
 
         :root {
             --theme-color:  #28A745;
+            --secondary-color:#FFB31C;
         }
         
         body{
-            font-family: 'Lato', sans-serif!important;
+            font-family: 'Poppins', sans-serif!important;
         }
         .btn {
           color: #fff;
