--- a/src/ian_cms/templates/ptow.html
+++ b/src/ian_cms/templates/ptow.html
@@ -3,7 +3,97 @@
 {% block content %}
 {% load static %}
 
+<main>
+<section id="featured-video">
+    <div class="container py-5">
+        <h1 class="text-center pb-3" style="font-weight: bolder;color:black">PTOW of the week </h1>
 
+        <div class="row pt-3">
+            <div class="col-md-6 m-auto px-3">
+                <div class="card mb-4" style="border-radius:15px;background-color:#F5E0EF; ">
+                    <div class="card-body">
+                        <div class="shadow" style="padding:56.25% 0 0 0;position:relative;">
+                            <iframe src= "https://player.vimeo.com/video/536788655"
+                                    style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+                                    allow="autoplay; fullscreen" allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 p-5">   
+                <h3>Summary of video</h3>                
+                <p class="lead pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga</p>
+            </div>
+        </div>
+    </div>
+ </section>
 
+ <!-- Playlist of firesides -->
 
+    <section class="fireside-sec-1 py-5" style="background-color:white">
+        <div class="container">
+            <div style="text-align:center;padding-top:30px">
+                <h2 class="pt-2 text-center" style="font-weight: bolder;color:black">
+                    PTOW Conversations
+                </h2>
+                <p class="card-title">Below all the recordings of the ptow sessions we have held so far. Enjoy!!</p>
+
+            </div>
+             <!-- cards section -->
+            <section class="py-5">
+                <div class="container">
+                    <div class="row">
+                      
+                            <div class="col-sm-4" style="color:#000;text-align:center">
+                                <h5 class="card-title">PTOW Session with Nora Denzel</h5>
+                                <div class="card mb-4" style="border-radius:15px;background-color:#F5E0EF; ">
+                                    <div class="card-body">
+                                        <div class="shadow" style="padding:56.25% 0 0 0;position:relative;">
+                                            <iframe src= "https://player.vimeo.com/video/536788655"
+                                                    style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+                                                    allow="autoplay; fullscreen" allowfullscreen>
+                                            </iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4" style="color:#000;text-align:center">
+                                <h5 class="card-title">PTOW Session with Nora Denzel</h5>
+                                <div class="card mb-4" style="border-radius:15px;background-color:#F5E0EF; ">
+                                    <div class="card-body">
+                                        <div class="shadow" style="padding:56.25% 0 0 0;position:relative;">
+                                            <iframe src= "https://player.vimeo.com/video/536788655"
+                                                    style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+                                                    allow="autoplay; fullscreen" allowfullscreen>
+                                            </iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4" style="color:#000;text-align:center">
+                                <h5 class="card-title">PTOW Session with Nora Denzel</h5>
+                                <div class="card mb-4" style="border-radius:15px;background-color:#F5E0EF; ">
+                                    <div class="card-body">
+                                        <div class="shadow" style="padding:56.25% 0 0 0;position:relative;">
+                                            <iframe src= "https://player.vimeo.com/video/536788655"
+                                                    style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+                                                    allow="autoplay; fullscreen" allowfullscreen>
+                                            </iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                    </div>
+                </div>
+            </section>
+        </div>
+    </section>
+
+ <!-- End of Playlist -->
+
+</main>
 {% endblock content %}
