--- a/src/ian_cms/templates/base.html
+++ b/src/ian_cms/templates/base.html
@@ -71,7 +71,7 @@
         body{
             font-family: 'Poppins', sans-serif!important;
         }
-        .btn {
+        .btn-main {
           color: #fff;
           background-color: var(--theme-color)!important;
           border-color: var(--theme-color)!important;
