--- a/src/ian_cms/templates/navbar.html
+++ b/src/ian_cms/templates/navbar.html
@@ -9,6 +9,7 @@
 .nav-item{
     color: #fff;
 }
+
 </style>
 
 <header style="background-color: #122742;">
@@ -25,7 +26,12 @@
        
             <a class="nav-item nav-link" href="{% url 'content:ptow' %}">PTOW</a>
             <a class="nav-item nav-link" href="{% url 'content:articles' %}">Articles</a>        
-            <a href="/register"><button type="button" class="btn btn-primary">Login</button></a>
+            <a href="/register"><button type="button" class="btn btn-danger mr-2">Login</button></a>
+
+            <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0 btn-main" type="submit">Search</button>
+            </form>
 
      
           </div>
