--- a/src/ian_cms/templates/base.html
+++ b/src/ian_cms/templates/base.html
@@ -63,6 +63,8 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap');
 
+      @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap');
+
         :root {
             --theme-color:  #28A745;
             --secondary-color:#FFB31C;
@@ -76,7 +78,14 @@
           background-color: var(--theme-color)!important;
           border-color: var(--theme-color)!important;
        
-      }
+        }
+        .title{
+            font-family: 'Caveat', cursive;
+            font-size: 3.5rem;
+            font-weight: bold;
+            color: var(--theme-color);
+          
+        }
      
     </style>
 
