--- a/src/ian_cms/templates/ptow.html
+++ b/src/ian_cms/templates/ptow.html
@@ -6,7 +6,7 @@
 <main>
 <section id="featured-video">
     <div class="container py-5">
-        <h1 class="text-center pb-3" style="font-weight: bolder;color:black">PTOW of the week </h1>
+        <h1 class="text-center pb-3 title" style="font-weight: bolder;color:#C896AB">PTOW of the week </h1>
 
         <div class="row pt-3">
             <div class="col-md-6 m-auto px-3">
