--- a/src/ian_cms/templates/articles.html
+++ b/src/ian_cms/templates/articles.html
@@ -3,7 +3,87 @@
 {% block content %}
 {% load static %}
 
+<style>
+    a{
+        color: var(--theme-color);
+    }
+</style>
 
+<main>
+<section id="featured-video">
+    <div class="container py-5">
+        <h1 class="text-center pb-3 title" style="font-weight: bolder;color:var(--theme-color);">Article of the week </h1>
 
+        <div class="row pt-3">
+            <div class="col-md-6 m-auto px-3">
+                <img class="img-fluid" src="{% static 'img/placeholder-img.png' %}">
 
+       
+            </div>
+            <div class="col-md-6 p-5">   
+                <h3>Summary of article</h3>                
+                <p class="lead pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga</p>
+            </div>
+        </div>
+    </div>
+ </section>
+
+ <!-- Playlist of firesides -->
+
+    <section class="fireside-sec-1 py-5" style="background-color:white">
+        <div class="container">
+            <div style="text-align:center;padding-top:30px">
+                <h2 class="pt-2 text-center" style="font-weight: bolder;color:#000">
+                    Article library
+                </h2>
+                <p class="card-title">Below are a list of all the recommended articles you can read. Enjoy!!</p>
+
+            </div>
+             <!-- cards section -->
+            <section class="py-5">
+                <div class="container">
+                    <div class="row">
+                      
+                            <div class="col-sm-4" style="color:#000;text-align:center">
+                                <div class="card" style="width: 18rem;">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Article title</h5>
+                                      <h6 class="card-subtitle mb-2 text-muted">Summary</h6>
+                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <a href="#" class="card-link">Link</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4" style="color:#000;text-align:center">
+                                <div class="card" style="width: 18rem;">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Article title</h5>
+                                      <h6 class="card-subtitle mb-2 text-muted">Summary</h6>
+                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <a href="#" class="card-link">Link</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4" style="color:#000;text-align:center">
+                                <div class="card" style="width: 18rem;">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Article title</h5>
+                                      <h6 class="card-subtitle mb-2 text-muted">Summary</h6>
+                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <a href="#" class="card-link">Link</a>
+                                    </div>
+                                </div>
+                            </div>
+            
+                    </div>
+                </div>
+            </section>
+        </div>
+    </section>
+
+ <!-- End of Playlist -->
+
+</main>
 {% endblock content %}
