--- a/src/ian_cms/templates/index.html
+++ b/src/ian_cms/templates/index.html
@@ -63,9 +63,9 @@
 
             <div class="row pt-3">
                 <div class="col-md-6 m-auto px-3">
-                    <img class="img-fluid" src="{% static 'img/video-placeholder.jpg' %}">      
+                    <img class="img-fluid" src="{% static 'img/placeholder-img.png' %}">
                 </div>
-                <div class="col-md-6 p-3">   
+                <div class="col-md-6 p-5">   
                     <h3>Article summary</h3>                
                     <p class="lead pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
                         molestiae quas vel sint commodi repudi</p>
